--- a/src/assets/demo.html
+++ b/src/assets/demo.html
@@ -15,7 +15,7 @@
           'Helvetical Neue', sans-serif;
         font-size: 1.125rem;
         text-align: center;
-        background-color: #ccc;
+        background: #ccc;
       }
       h1 {
         font-weight: 100;
@@ -281,6 +281,11 @@
           fill="white"
         ></path>
       </symbol>
+      <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="location">
+        <path
+          d="M7.93488 0C11.5718 0 14.5198 2.94801 14.5198 6.58491C14.5198 9.36745 12.5646 12.3999 8.70481 15.7146C8.49019 15.899 8.21655 16.0002 7.93362 16C7.65068 15.9998 7.37722 15.898 7.16293 15.7133L6.90764 15.4917C3.21874 12.2635 1.34998 9.30532 1.34998 6.58491C1.34998 2.94801 4.29799 0 7.93488 0ZM7.93488 4.05225C7.26318 4.05225 6.61899 4.31908 6.14402 4.79405C5.66906 5.26901 5.40222 5.9132 5.40222 6.58491C5.40222 7.25661 5.66906 7.9008 6.14402 8.37576C6.61899 8.85073 7.26318 9.11756 7.93488 9.11756C8.60658 9.11756 9.25077 8.85073 9.72574 8.37576C10.2007 7.9008 10.4675 7.25661 10.4675 6.58491C10.4675 5.9132 10.2007 5.26901 9.72574 4.79405C9.25077 4.31908 8.60658 4.05225 7.93488 4.05225Z"
+        ></path>
+      </symbol>
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" id="keyboard">
         <path
           d="M26.25 24.375H3.75C3.25272 24.375 2.77581 24.1775 2.42417 23.8258C2.07254 23.4742 1.875 22.9973 1.875 22.5V9.375C1.875 8.87772 2.07254 8.40081 2.42417 8.04918C2.77581 7.69754 3.25272 7.5 3.75 7.5H26.25C26.7473 7.5 27.2242 7.69754 27.5758 8.04918C27.9275 8.40081 28.125 8.87772 28.125 9.375V22.5C28.125 22.9973 27.9275 23.4742 27.5758 23.8258C27.2242 24.1775 26.7473 24.375 26.25 24.375ZM3.75 9.375V22.5H26.25V9.375H3.75Z"
@@ -299,11 +304,6 @@
         <path d="M20.625 15H24.375V16.875H20.625V15Z" fill="#545963"></path>
         <path d="M16.875 15H18.75V16.875H16.875V15Z" fill="#545963"></path>
         <path d="M21.5625 18.75H24.375V20.625H21.5625V18.75Z" fill="#545963"></path>
-      </symbol>
-      <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="location">
-        <path
-          d="M7.93488 0C11.5718 0 14.5198 2.94801 14.5198 6.58491C14.5198 9.36745 12.5646 12.3999 8.70481 15.7146C8.49019 15.899 8.21655 16.0002 7.93362 16C7.65068 15.9998 7.37722 15.898 7.16293 15.7133L6.90764 15.4917C3.21874 12.2635 1.34998 9.30532 1.34998 6.58491C1.34998 2.94801 4.29799 0 7.93488 0ZM7.93488 4.05225C7.26318 4.05225 6.61899 4.31908 6.14402 4.79405C5.66906 5.26901 5.40222 5.9132 5.40222 6.58491C5.40222 7.25661 5.66906 7.9008 6.14402 8.37576C6.61899 8.85073 7.26318 9.11756 7.93488 9.11756C8.60658 9.11756 9.25077 8.85073 9.72574 8.37576C10.2007 7.9008 10.4675 7.25661 10.4675 6.58491C10.4675 5.9132 10.2007 5.26901 9.72574 4.79405C9.25077 4.31908 8.60658 4.05225 7.93488 4.05225Z"
-        ></path>
       </symbol>
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="Logo-KaohsiungMetro">
         <g clip-path="url(#clip0_752_55288)">
@@ -352,18 +352,20 @@
           fill="#7550CC"
         ></path>
       </symbol>
-      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 13" id="Point-stop">
-        <circle cx="6.5" cy="6.5" r="5" fill="white" stroke="#545963" stroke-width="3"></circle>
-      </symbol>
-      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="search">
+      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 17 17" id="positioning">
         <path
-          d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z"
-          stroke="#7550CC"
-          stroke-width="2"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M1.47021 7.86395L15.9608 1L9.09683 15.4906L7.57151 9.38928L1.47021 7.86395Z"
+          fill="#606470"
+          stroke="#606470"
+          stroke-width="1.5"
           stroke-linecap="round"
           stroke-linejoin="round"
         ></path>
-        <path d="M21 20.9999L16.65 16.6499" stroke="#7550CC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </symbol>
+      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13 13" id="Point-stop">
+        <circle cx="6.5" cy="6.5" r="5" fill="white" stroke="#545963" stroke-width="3"></circle>
       </symbol>
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" id="Refresh">
         <path d="M15.3334 2.66675V6.66675H11.3334" stroke="#545963" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -380,6 +382,16 @@
           d="M5.33551 2.66943L5.25751 2.6741C5.09534 2.69321 4.94582 2.77116 4.83732 2.89319C4.72881 3.01521 4.66886 3.17281 4.66884 3.3361V11.0561L3.14017 9.52943L3.07751 9.47343C2.94356 9.36862 2.77461 9.31896 2.60526 9.33463C2.4359 9.3503 2.27893 9.43011 2.16648 9.55771C2.05404 9.68532 1.99462 9.85108 2.00038 10.0211C2.00615 10.1911 2.07667 10.3524 2.19751 10.4721L4.86684 13.1388L4.92951 13.1941C5.05785 13.2935 5.21807 13.3427 5.38009 13.3324C5.54211 13.3221 5.6948 13.253 5.80951 13.1381L8.47351 10.4714L8.52951 10.4088C8.62892 10.2804 8.67809 10.1202 8.66778 9.95819C8.65747 9.79617 8.58839 9.64348 8.47351 9.52877L8.41017 9.47343C8.28183 9.37402 8.12161 9.32485 7.95959 9.33516C7.79757 9.34547 7.64488 9.41455 7.53017 9.52943L6.00217 11.0588V3.3361L5.99751 3.2581C5.9784 3.09593 5.90044 2.94642 5.77842 2.83791C5.6564 2.7294 5.49879 2.66946 5.33551 2.66943ZM8.33551 3.33343C8.1587 3.33343 7.98913 3.40367 7.8641 3.5287C7.73908 3.65372 7.66884 3.82329 7.66884 4.0001C7.66884 4.17691 7.73908 4.34648 7.8641 4.4715C7.98913 4.59653 8.1587 4.66677 8.33551 4.66677H13.6688C13.8457 4.66677 14.0152 4.59653 14.1402 4.4715C14.2653 4.34648 14.3355 4.17691 14.3355 4.0001C14.3355 3.82329 14.2653 3.65372 14.1402 3.5287C14.0152 3.40367 13.8457 3.33343 13.6688 3.33343H8.33551ZM8.33551 5.33343C8.1587 5.33343 7.98913 5.40367 7.8641 5.5287C7.73908 5.65372 7.66884 5.82329 7.66884 6.0001C7.66884 6.17691 7.73908 6.34648 7.8641 6.4715C7.98913 6.59653 8.1587 6.66677 8.33551 6.66677H11.6688C11.8457 6.66677 12.0152 6.59653 12.1402 6.4715C12.2653 6.34648 12.3355 6.17691 12.3355 6.0001C12.3355 5.82329 12.2653 5.65372 12.1402 5.5287C12.0152 5.40367 11.8457 5.33343 11.6688 5.33343H8.33551ZM7.66884 8.0001C7.66884 7.82329 7.73908 7.65372 7.8641 7.5287C7.98913 7.40367 8.1587 7.33343 8.33551 7.33343H9.66884C9.84565 7.33343 10.0152 7.40367 10.1402 7.5287C10.2653 7.65372 10.3355 7.82329 10.3355 8.0001C10.3355 8.17691 10.2653 8.34648 10.1402 8.4715C10.0152 8.59653 9.84565 8.66677 9.66884 8.66677H8.33551C8.1587 8.66677 7.98913 8.59653 7.8641 8.4715C7.73908 8.34648 7.66884 8.17691 7.66884 8.0001Z"
           fill="#7550CC"
         ></path>
+      </symbol>
+      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="search">
+        <path
+          d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z"
+          stroke="#7550CC"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        ></path>
+        <path d="M21 20.9999L16.65 16.6499" stroke="#7550CC" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
       </symbol>
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="StartingPoint">
         <circle cx="12" cy="12.5" r="6.5" stroke="#A6AAB4" stroke-width="2"></circle>
@@ -436,9 +448,9 @@
     ><svg class="icon">
       <use xlink:href="#Keyboard-delete"></use></svg
     ><svg class="icon">
-      <use xlink:href="#keyboard"></use></svg
-    ><svg class="icon">
       <use xlink:href="#location"></use></svg
+    ><svg class="icon">
+      <use xlink:href="#keyboard"></use></svg
     ><svg class="icon">
       <use xlink:href="#Logo-KaohsiungMetro"></use></svg
     ><svg class="icon">
@@ -446,13 +458,15 @@
     ><svg class="icon">
       <use xlink:href="#moreInfo"></use></svg
     ><svg class="icon">
-      <use xlink:href="#Point-stop"></use></svg
+      <use xlink:href="#positioning"></use></svg
     ><svg class="icon">
-      <use xlink:href="#search"></use></svg
+      <use xlink:href="#Point-stop"></use></svg
     ><svg class="icon">
       <use xlink:href="#Refresh"></use></svg
     ><svg class="icon">
       <use xlink:href="#sort"></use></svg
+    ><svg class="icon">
+      <use xlink:href="#search"></use></svg
     ><svg class="icon">
       <use xlink:href="#StartingPoint"></use></svg
     ><svg class="icon">
